Fix URL mistake, change `githun` to `github`

--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
 <meta property="og:title" content="Yubraj Bhoi" />
 <meta property="og:description" content="Yubraj Bhoi&#39;s personal website" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://yubrajbhoi.githun.io/" />
+<meta property="og:url" content="https://yubrajbhoi.github.io/" />
 
 
 
 
 
-<link rel="canonical" href="https://yubrajbhoi.githun.io/">
+<link rel="canonical" href="https://yubrajbhoi.github.io/">
 
 
 <link rel="preload" href="/fonts/fa-brands-400.woff2" as="font" type="font/woff2" crossorigin>
