--- a/series/index.html
+++ b/series/index.html
@@ -20,13 +20,13 @@
 <meta property="og:title" content="Series" />
 <meta property="og:description" content="Yubraj Bhoi&#39;s personal website" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://yubrajbhoi.githun.io/series/" />
+<meta property="og:url" content="https://yubrajbhoi.github.io/series/" />
 
 
 
 
 
-<link rel="canonical" href="https://yubrajbhoi.githun.io/series/">
+<link rel="canonical" href="https://yubrajbhoi.github.io/series/">
 
 
 <link rel="preload" href="/fonts/fa-brands-400.woff2" as="font" type="font/woff2" crossorigin>
@@ -126,7 +126,7 @@
   <section class="container taxonomy">
   <header>
     <h1 class="title">
-      <a class="title-link" href="https://yubrajbhoi.githun.io/series/">Series</a>
+      <a class="title-link" href="https://yubrajbhoi.github.io/series/">Series</a>
     </h1>
   </header>
   
