--- a/404.html
+++ b/404.html
@@ -20,13 +20,13 @@
 <meta property="og:title" content="404 Page not found" />
 <meta property="og:description" content="Yubraj Bhoi&#39;s personal website" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://yubrajbhoi.githun.io/404.html" />
+<meta property="og:url" content="https://yubrajbhoi.github.io/404.html" />
 
 
 
 
 
-<link rel="canonical" href="https://yubrajbhoi.githun.io/404.html">
+<link rel="canonical" href="https://yubrajbhoi.github.io/404.html">
 
 
 <link rel="preload" href="/fonts/fa-brands-400.woff2" as="font" type="font/woff2" crossorigin>
